--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chat</title>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-
     <link rel="stylesheet" href="style.css"/>
-    
 </head>
 <body>
     <form id="chat">
-        <input type="text" name="username" placeholder="Digite seu nome"/>
         <div class="messages"></div>
+        <input type="text" name="username" placeholder="Digite seu nome"/>
         <input type="text" name="message" placeholder="Digite sua mensagem"/>
         <button type="submit">Enviar</button>
     </form>
