--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <a href="/notificador.html">notificador</a>
     <form id="chat">
         <div class="messages"></div>
         <input type="text" name="username" placeholder="Digite seu nome"/>
@@ -17,8 +18,9 @@
         <button type="submit">Enviar</button>
     </form>
 
+
     <script type="text/javascript">
-      var socket = io('http://localhost:3000');
+      var socket = io('http://192.168.100.5:3000');
 
       function renderMessage(message){
           $('.messages').append('<div class= "message"><strong>'+ message.author +'</strong>:'+message.message+'</div>');
